# studious-octo-computing-machine

./: .gitignore  MAINTENANCE.md  README.md
backend/: pyproject.toml
backend/src/genui/: api.py  cli.py  comfy.py  importer.py  main.py  models.py  prompts.py  service.py  settings.py  storage.py  workflows.py
comfyui-workflows/: art-card-batch.json  txt2img-lora.json  txt2img-standard.json
config/: local-config.example.json
config/examples/batches/: art-cards.json
config/examples/prompt-files/: sample-01.json  sample-02.json
config/presets/: dark-fantasy-style.json  ritual-card.json
config/style-blocks/: premium-fantasy-finish.json
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css  types.ts
scripts/: bootstrap-stability-matrix.ps1  configure-tailscale-serve.ps1  install-first-time.ps1  launch-backend.ps1  launch-frontend.ps1  launch.ps1  rebuild-frontend.ps1  update-packages.ps1
