[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genui-backend"
version = "0.1.0"
description = "Local-first image generation backend and CLI for ComfyUI"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "httpx>=0.28.0",
  "pydantic>=2.9.0",
  "typer>=0.12.5",
  "python-multipart>=0.0.12"
]

[project.scripts]
genui = "genui.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
